# fastapi-oracle

./: .env.example  README.md  pyproject.toml
.github/workflows/: check.yml  release.yml
fastapi_oracle/: __init__.py  config.py  constants.py  core.py  errors.py  pools.py  utils.py
scripts/: aptinstall.sh  format.sh  test.sh  testdb.sh  verify.sh
tests/: conftest.py  test_core.py  test_utils.py
