[tool.poetry]
name = "fastapi-oracle"
version = "0.1.0"
description = "Helpers for using the cx_Oracle_async library with the FastAPI framework."
authors = ["Jeremy Epstein <jazepstein@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "fastapi_oracle"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
fastapi = ">=0.85.0"
pydantic = {extras = ["dotenv"], version = ">=1.10.2"}
cx-Oracle-async = ">=0.3.3"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
black = ">=22.8.0"
flake8 = ">=5.0.4"
mypy = ">=0.971"
isort = ">=5.10.1"
pytest-cov = ">=3.0.0"
autoflake = ">=1.6.1"
requests = ">=2.28.1"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "pureunit: no database nor any other I/O dependencies",
    "database: needs to connect to a real database",
]

[tool.isort]
profile = "black"
lines_after_imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
