[tool.poetry]
name = "fastapi-oracle"
version = "0.13.0"
description = "Helpers for using the cx_Oracle_async library with the FastAPI framework."
authors = ["Jeremy Epstein <jazepstein@gmail.com>"]
homepage = "https://github.com/Jaza/fastapi-oracle"
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "fastapi_oracle"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
fastapi = "*"
pydantic = {extras = ["dotenv"], version = "*"}
cx-Oracle-async = "*"
loguru = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"
mypy = "*"
isort = "*"
pytest-cov = "*"
autoflake = "*"
requests = "*"
bandit = {extras = ["toml"], version = "*"}
pytest-asyncio = "*"
httpx = "^0.23.3"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "pureunit: no database nor any other I/O dependencies",
    "database: needs to connect to a real database",
]

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.bandit]
skips = ["B101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
