[tool.poetry]
name = "fastapi-oracle"
version = "0.20.0"
description = "Helpers for using the python-oracledb library with the FastAPI framework."
authors = ["Jeremy Epstein <jazepstein@gmail.com>"]
homepage = "https://github.com/Jaza/fastapi-oracle"
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "fastapi_oracle"}]

[tool.poetry.dependencies]
python = ">=3.10,<4"
fastapi = "*"
pydantic = {extras = ["dotenv"], version = ">=1"}
oracledb = "*"
loguru = "*"


[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"
mypy = "*"
isort = "*"
pytest-cov = "*"
autoflake = "*"
ipython = "*"
requests = "*"
bandit = {extras = ["toml"], version = "*"}
pytest-asyncio = "*"
httpx = "*"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "pureunit: no database nor any other I/O dependencies",
    "database: needs to connect to a real database",
]

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.bandit]
skips = ["B101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
